--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,185 @@
-*border{
+*{
     margin: 0px;
 }
+body{
+    background-color:rgb(52, 57, 52);
+    color: aliceblue;
+    
+}
+ul{
+    list-style: none;
+    padding: 10px; 
+}
+li{
+    padding: 7px;
+}
+.dashboard-left{
+    height: 100vh;
+    width:15%;
+    background-color: rgb(92, 83, 83);
+    
+}
+li:hover{
+    background-color: rgb(40, 40, 40);
+}
+.first-heading{
+    font-size: 20px;
+}
+.dashboard{
+    display: flex;
+}
+.search{
+    border-radius: 20px;
+}
+/* top-image-logo */
+
+.top-image-logo>img{
+    max-width: 40px;
+    margin-left: 242px;  
+    margin-top: 5px;
+    clip-path: circle();
+}
+
+.search-class>img{
+    max-width: 20px;
+    max-height: 20px;
+    clip-path: circle();  
+}
+.dashboard-top-first
+{
+    margin-left: 100px;
+}
+.dashboard-top-second{
+    margin-top: 30px;
+    display: flex;
+}
+.top-second-image-logo>img
+{ 
+    max-width: 100px;
+    max-height: 100px;
+    /* border-radius:50%; */
+    clip-path: circle();
+    margin-left: 30px;
+}
+/* .dashboard-top-second-text{
+   display: flex;
+   flex-direction: column;
+   
+} */
+#search{
+    width: 750px;
+}
+
+/* css style for top second text */
+
+.top-main-text{
+    display: flex;
+   flex-direction: column;
+}
+.dashboard-top-second-text-down{
+    font-size: 30px;
+    font-weight: bold;
+}
+.dashboard-top-second-text{
+    font-size: 10px;
+    font-weight: 100;
+}
+
+.dashboard-top{
+    background-color:rgb(92, 83, 83);
+    width: 90vw;
+    height: 20vh;
+}
+.dashboard-top-buttons{
+    display: flex;
+    margin-left: 550px;
+
+}
+.dashboard-top-buttons>input
+{
+    width: 100px;
+    border-radius: 20px;
+    background-color:rgb(92, 83, 83);
+    border: 2px solid white;
+    padding:5px;
+    margin-left: 10px;
+    color: white;
+}
+.dashboard-top-second{
+    display: flex;
+}
+
+.dashboard-top-buttons>input:hover{
+    background-color: rgb(40, 40, 40);
+}
+.top-down{
+    display: flex;
+    flex-direction: column;
+}
+
+.main-body{
+    margin: 10px;
+    max-width: 950px;
+    
+}
+
+/* .body-second-heading{
+    margin-left: 70vw;
+} */
+.first-project{
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    max-height: 150px;
+    background-color:rgb(92, 83, 83);
+    padding: 20px;
+    border-radius: 10px;
+    border-left: 10px solid blue;
+    margin: 10px;
+    margin: 10px;
+
+    
+}
+.first-project-first-para{
+    
+    font-size: 20px;
+}
+.first-project-second-para{
+    font-size: 15px;
+}
+ 
+
+/* .second-project{
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    max-height: 150px;
+    background-color:rgb(92, 83, 83);
+    padding: 20px;
+    border-radius: 10px;
+    border-left: 10px solid blue;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+.third-project{
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    max-height: 150px;
+    background-color:rgb(92, 83, 83);
+    padding: 20px;
+    border-radius: 10px;
+    border-left: 10px solid blue;
+    margin-top: 10px;
+    margin-left: 10px;
+    
+} */
+
+.main-body-left-content{
+    display: flex;
+    flex-wrap: wrap;
+}
+/* .main-body-content{
+    display: flex;
+    flex-direction: row;
+} */
