--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,26 +4,28 @@
 body{
     background-color:rgb(52, 57, 52);
     color: aliceblue;
-    
+
 }
 ul{
     list-style: none;
     padding: 10px; 
 }
 li{
-    padding: 7px;
+    padding: 10px;
 }
 .dashboard-left{
     height: 100vh;
     width:15%;
+    /* width:1000px; */
     background-color: rgb(92, 83, 83);
-    
+
 }
 li:hover{
     background-color: rgb(40, 40, 40);
 }
 .first-heading{
-    font-size: 20px;
+    padding-bottom: 10px;
+    font-size: 25px;
 }
 .dashboard{
     display: flex;
@@ -35,15 +37,17 @@ li:hover{
 
 .top-image-logo>img{
     max-width: 40px;
-    margin-left: 242px;  
+    
     margin-top: 5px;
     clip-path: circle();
+    
 }
 
 .search-class>img{
     max-width: 20px;
     max-height: 20px;
-    clip-path: circle();  
+    clip-path: circle(); 
+
 }
 .dashboard-top-first
 {
@@ -118,9 +122,11 @@ li:hover{
 }
 
 .main-body{
+    display: flex;
     margin: 10px;
-    max-width: 950px;
     
+    flex-direction: row-reverse;
+
 }
 
 /* .body-second-heading{
@@ -129,25 +135,27 @@ li:hover{
 .first-project{
     display: flex;
     flex-direction: column;
-    max-width: 300px;
+    max-width: 400px;
     max-height: 150px;
     background-color:rgb(92, 83, 83);
     padding: 20px;
     border-radius: 10px;
     border-left: 10px solid blue;
     margin: 10px;
-    margin: 10px;
-
     
+
+
 }
 .first-project-first-para{
-    
+    font-weight: 900;
     font-size: 20px;
+    padding-bottom: 5px;
 }
 .first-project-second-para{
     font-size: 15px;
+    font-weight:lighter;
 }
- 
+
 
 /* .second-project{
     display: flex;
@@ -178,8 +186,85 @@ li:hover{
 .main-body-left-content{
     display: flex;
     flex-wrap: wrap;
+    max-width: 950px;
 }
 /* .main-body-content{
     display: flex;
     flex-direction: row;
 } */
+.body-first-heading{
+    display: flex;
+    flex-direction: column;
+
+}
+.aside-announcements-heading{
+    margin-left: 10px;
+}
+
+.aside-announcements-body{
+    
+    background-color:rgb(92, 83, 83);
+    padding: 20px;
+    border-radius: 10px;
+   
+    margin: 10px;
+}
+.aside-people-body{
+    background-color:rgb(92, 83, 83);
+    padding: 20px;
+    border-radius: 10px;
+
+    margin: 10px;
+}
+.aside-people-heading{
+    margin-left: 10px;
+}
+.aside-announcements-first-para{
+    font-size: 15px;
+    padding-bottom: 5px;
+    font-weight:lighter;
+}
+.aside-announcements-second-para{
+    font-size: small;
+    padding-bottom: 5px;
+    font-weight: lighter;
+}
+hr{
+    margin-bottom: 10px;
+}
+.aside-image>img{
+    clip-path: circle();
+    max-width: 45px;
+    max-height: 45px;
+    
+}
+.aside-people-second-para-one{
+    padding-left: 20px;
+    font-size: 20px;
+}
+.aside-image-first{
+    display: flex;
+
+    align-items: center;
+}
+
+.three-image>img{
+    clip-path: circle();
+    max-width: 15px;
+    max-height: 15px;
+    
+    
+}
+.three-image{
+    padding-top: 40px;
+    padding-left: 70%;
+    display: flex;
+    justify-content: space-around;
+   
+}
+.bell-image>img{
+    clip-path: circle();
+    max-width: 20px;
+    max-height: 20px; 
+    margin-left: 242px;  
+}
