--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ li:hover{
 
 .main-body{
     display: flex;
-    margin: 10px;
+    margin-left: 5px;
     
     flex-direction: row-reverse;
 
@@ -267,4 +267,15 @@ hr{
     max-width: 20px;
     max-height: 20px; 
     margin-left: 242px;  
+}
+.heading{
+    margin: 2px;
+}
+#heading-first{
+    display: inline;
+    padding-left: 20px; 
+}
+#heading-second{
+    display: inline;
+    padding-left: 840px;
 }
